--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ to {opacity: 1}
         </script>
         <!--माथि जाने बटमको लागि-->
         <div class="topnav" id="myTopnav">
-          <a href="#home" class="active"><span class="mark">ﾋﾞﾝﾃﾞｩ小坂店</span> ホーム</a>
+          <a href="#home" class="active"><span class="mark"></span> ホーム</a>
           <a href="#news">コース料理</a>
           <a href="#zyoho">メニュー</a>
           <a href="https://www.hotpepper.jp/strJ000736490/yoyaku/202102111130_rpn2_hpds/">予約</a>
