--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ to {opacity: 1}
           <a href="#lunch">ランチメニュー</a>
           <a href="#dinner">ディナーメニュー</a>
           <a href="#kids">お客様セット</a>
-          <a href="#tanehoudai">食べ放題</a>
+          <a href="#tabehoudai">食べ放題</a>
           <a href="https://www.hotpepper.jp/strJ000736490/yoyaku/202102111130_rpn2_hpds/">予約</a>
           <a href="#zyoho">お問い合わせ</a>
           <a href="javascript:void(0);" class="icon" style="background-color: black;" onclick="myFunction()">
@@ -462,8 +462,8 @@ to {opacity: 1}
           <div class="akusesu"><h1>アクセス</h1></div>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3683.3462618779486!2d135.57753902336702!3d34.66761890503628!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000df9515181ad9%3A0xeb2cd32026887f44!2z44OT44Oz44OJ44Kl5bCP6Ziq5bqX!5e0!3m2!1sja!2sjp!4v1612780621169!5m2!1sja!2sjp" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           <div class="zyohonaiyo">
-            <h2>NAMASTE BINDU</h2>
-          <h3>本格インド料理ビンドゥ小阪店</h3>
+            <h2>本格インド料理ビンドゥ小阪店</h2>
+          
               <h3>〒577-0036 大阪府東大阪市御厨栄町１丁目７−１４ ハロー小阪ビル1階</h3>
               <h3>Phone: 0667882006</h3>
               <h3>Fax: 0667882006</h3>
