--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta content="東大阪のアジア・エスニック料理、インド料理 ビンドゥ 小阪店のホームページです。お店の基本情報やおすすめ料理の「食べ飲み放題コース【男性3500円　女性3000円】」「Aセット」「タンドリーチキンとチーズナンが半額の５００円♪」をはじめとしたメニュー情報などをご紹介しています。" name="description" /><meta content="インド料理 ビンドゥ 小阪店, 公式ホームページ" name="keywords" /><meta content="美味しいカレー" name="keywords" /><meta content="インド料理　ビンドゥ　小阪店" property="og:title" />
     <meta  property="og:title" content="インド料理　ビンドゥ　小阪店"/>
     <meta  name="og:description" content="東大阪のアジア・エスニック料理、インド料理 ビンドゥ 小阪店のホームページです。お店の基本情報やおすすめ料理の「食べ飲み放題コース【男性3500円　女性3000円】」「Aセット」「タンドリーチキンとチーズナンが半額の５００円♪」をはじめとしたメニュー情報などをご紹介しています。"/>
-    <meta  name="og:keywords" content="インド料理 ビンドゥ 小阪店, 公式ホームページ" />
+    <meta  name="og:keywords" content="インド料理 ビンドゥ 小阪店, 公式ホームページ,大阪,店舗,インド料理,ビンドゥ" />
+
     
     </head>
 <style>
